homework/41-cheat-prod-service-wrong-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: splunk
  namespace: splunk-prod
spec:
  selector:
    app: splunk
  ports:
    - name: http
      port: 28091
      targetPort: 8091
