homework/10-template-argo-app-env-namespace.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sargoappenvironment
spec:
  crd:
    spec:
      names:
        kind: K8sArgoAppEnvironment
      validation:
        openAPIV3Schema:
          type: object
          properties:
            envLabelKey:
              type: string
            allowedNamespaceByEnv:
              type: object
              additionalProperties:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sargoappenvironment

        violation[{"msg": msg}] {
          input.review.kind.group == "argoproj.io"
          input.review.kind.kind == "Application"

          env_key := input.parameters.envLabelKey
          env := input.review.object.metadata.labels[env_key]
          env != ""

          allowed := input.parameters.allowedNamespaceByEnv[env]
          allowed != ""

          destns := input.review.object.spec.destination.namespace
          destns != allowed

          msg := sprintf("DENY: ArgoCD Application env=%v must deploy only to namespace %v (got %v)", [env, allowed, destns])
        }
